# pydantic-market-data

./: .gitignore  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  MANIFEST.in  MIGRATION_GUIDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/sessions/: 2026-04-14T12-00.md  2026-04-23T00-00.md
examples/: basic_usage.py  custom_datasource.py
pydantic_market_data/: __init__.py  interfaces.py  models.py
src/pydantic_market_data/: __init__.py  cli_models.py  interfaces.py  models.py
tests/: smoke_test.py  test_cli_models.py  test_models.py  test_price_error.py
