[project]
name = "pydantic-market-data"
version = "0.1.2"
description = "Shared models and interfaces for finance datasources"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Roman Medvedev", email = "pypi@romavm.dev" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "pydantic-extra-types>=2.11.0",
    "pycountry>=24.6.1",
]

[project.urls]
Homepage = "https://github.com/romamo/pydantic-market-data"
Repository = "https://github.com/romamo/pydantic-market-data"
Issues = "https://github.com/romamo/pydantic-market-data/issues"

[tool.uv]
dev-dependencies = [
    "ruff",
    "pytest",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
